# bytestove

./: CMakeLists.txt
resources/: filestove.qrc
src/filestove/: activity_monitor.cpp  activity_monitor.hpp  config.cpp  config.hpp  cook.cpp  cook.hpp  exceptions.hpp  file_collector.cpp  file_collector.hpp  file_info.hpp  main.cpp  path_to_string.hpp  stove.cpp  stove.hpp  version.hpp
src/filestove/ui/: about_dialog.cpp  about_dialog.hpp  config_holder.cpp  config_holder.hpp  cooker.cpp  cooker.hpp  options_dialog.cpp  options_dialog.hpp  pathlist_widget.cpp  pathlist_widget.hpp  tray_icon.cpp  tray_icon.hpp  widget.cpp  widget.hpp
